--- a/app/code/Trenzalore/TodoList/view/frontend/web/template/view/todolist/index.html
+++ b/app/code/Trenzalore/TodoList/view/frontend/web/template/view/todolist/index.html
@@ -1,14 +1,26 @@
 <div class="tr_actions">
-    <a class="tr_button tr_button_new" id="tr_button_new" type="button" data-bind="attr: { href: urlCreateNew }">
+    <a class="tr_button tr_button_new" id="tr_button_new" data-bind="attr: { href: urlCreateNew }">
         <!-- ko i18n: 'new' --><!-- /ko -->
     </a>
 </div>
 <hr>
 <div class="tr_list">
 
-
-
-
-
+    <ul>
+        <!-- ko foreach: { data: lists, as: 'item' } -->
+        <li data-bind="mageInit: { 'collapsible': { 'openedState': '_active', 'animate': { 'duration': 1000, 'easing': 'easeOutCubic' } } }">
+            <span data-bind="text: item.title" data-role="title"></span>
+            <ol data-role="content">
+                <!-- ko foreach: {data: JSON.parse(item.list), as: 'todoItem'} -->
+                <li>
+                    <!-- ko text: todoItem.title --><!-- /ko -->
+                    <!-- ko text: todoItem.value --><!-- /ko -->
+                    <!-- ko text: todoItem.date --><!-- /ko -->
+                </li>
+                <!-- /ko -->
+            </ol>
+        </li>
+        <!-- /ko -->
+    </ul>
 
 </div>
