--- a/app/code/Trenzalore/TodoList/view/frontend/web/css/source/module/_todo_list.less
+++ b/app/code/Trenzalore/TodoList/view/frontend/web/css/source/module/_todo_list.less
@@ -4,6 +4,21 @@
         border: 1px solid black;
         text-decoration: none;
         padding: 10px;
+        color: white;
+        border-radius: 3px;
+        font-weight: 700;
+
+        &.tr_button_new, &.tr_button_add {
+            background-color: #2d2df4 ;
+        }
+
+        &.tr_button_back {
+            background-color: #aaaaaa;
+        }
+
+        &.tr_button_save {
+            background-color: #2dff2d;
+        }
     }
 
     
